Grace/tests/gibbs/errors/t172.grace
// ERROR = L0004
print(2x2)
